--- a/package.json
+++ b/package.json
@@ -1,53 +1,66 @@
 {
-  "name": "colorpicker",
-  "productName": "Colorpicker",
-  "version": "2.0.2",
-  "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
-  "main": "src/main.js",
-  "scripts": {
-    "start": "npx electron src/main.js",
-    "standard": "standard",
-    "pack": "build --dir",
-    "release": "build --publish=never --config colorpicker-build.json",
-    "release-linux": "build --publish=never --config colorpicker-build.json --linux appImage",
-    "release-window": "build --publish=never --config colorpicker-build.json --win nsis, portable",
-    "nightly": "build --publish=never --config colorpicker-build-nightly.json",
-    "nightly-linux": "build --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
-    "rebuild": "npm rebuild --runtime=electron --target=2.0.11 --disturl=https://atom.io/download/electron --abi=57"
-  },
-  "repository": "https://github.com/toinane/colorpicker",
-  "keywords": [
-    "Colorpicker",
-    "colors",
-    "code",
-    "shading",
-    "picker",
-    "Toinane",
-    "Crea-THAT",
-    "crea-that"
-  ],
-  "dependencies": {
-    "electron-json-storage": "^4.1.2",
-    "request": "^2.88.0",
-    "robotjs": "git+https://github.com/toinane/robotjs.git",
-    "sortablejs": "^1.7.0",
-    "tippy.js": "^2.6.0"
-  },
-  "optionalDependencies": {
-    "osx-mouse": "^1.3.1",
-    "win-mouse": "^1.2.0"
-  },
-  "devDependencies": {
-    "electron": "2.0.11",
-    "electron-builder": "20.28.4",
-    "standard": "^12.0.1"
-  },
-  "author": {
-    "name": "Toinane",
-    "email": "toinane@crea-that.fr",
-    "url": "https://toinane.crea-th.at"
-  },
-  "bugs": "https://github.com/toinane/colorpicker/issues",
-  "homepage": "https://crea-th.at/p/colorpicker",
-  "license": "GPL-3.0"
+    "name": "colorpicker",
+    "productName": "Colorpicker",
+    "version": "2.0.3",
+    "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
+    "main": "src/main.js",
+    "scripts": {
+        "start": "npx electron src/main.js",
+        "standard": "standard",
+        "pack": "electron-builder --dir",
+        "release": "electron-builder --publish=never --config colorpicker-build.json",
+        "release-linux": "electron-builder --publish=never --config colorpicker-build.json --linux deb appImage",
+        "release-window": "electron-builder --publish=never --config colorpicker-build.json --win nsis portable",
+        "nightly": "electron-builder --publish=never --config colorpicker-build-nightly.json",
+        "nightly-linux": "electron-builder --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
+        "rebuild": "npm rebuild --runtime=electron --target=7.1.7 --disturl=https://atom.io/download/electron --abi=75"
+    },
+    "repository": "https://github.com/toinane/colorpicker",
+    "keywords": [
+        "Colorpicker",
+        "colors",
+        "code",
+        "shading",
+        "picker",
+        "Toinane",
+        "Crea-THAT",
+        "crea-that"
+    ],
+    "dependencies": {
+        "electron-json-storage": "^4.1.8",
+        "request": "^2.88.0",
+        "robotjs": "git+https://github.com/Toinane/robotjs",
+        "sortablejs": "^1.10.2",
+        "tippy.js": "^5.1.3"
+    },
+    "optionalDependencies": {
+        "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
+        "win-mouse": "git+https://github.com/Toinane/win-mouse",
+        "iohook": "^0.6.2"
+    },
+    "devDependencies": {
+        "electron": "7.1.7",
+        "electron-builder": "21.2.0",
+        "standard": "^14.3.1"
+    },
+    "author": {
+        "name": "Toinane",
+        "email": "toinane@crea-that.fr",
+        "url": "https://toinane.crea-th.at"
+    },
+    "bugs": "https://github.com/toinane/colorpicker/issues",
+    "homepage": "https://crea-th.at/p/colorpicker",
+    "license": "GPL-3.0",
+    "iohook": {
+        "targets": [
+            "electron-75"
+        ],
+        "platforms": [
+            "linux"
+        ],
+        "arches": [
+            "x64",
+            "ia32"
+        ]
+    }
 }
