--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "release-window": "electron-builder --publish=never --config colorpicker-build.json --win nsis portable",
         "nightly": "electron-builder --publish=never --config colorpicker-build-nightly.json",
         "nightly-linux": "electron-builder --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
-        "rebuild": "npm rebuild --runtime=electron --target=7.1.7 --disturl=https://atom.io/download/electron --abi=75"
+        "rebuild": "npm rebuild --runtime=electron --target=9.0.0-beta.2 --disturl=https://atom.io/download/electron --abi=80"
     },
     "repository": "https://github.com/toinane/colorpicker",
     "keywords": [
@@ -28,19 +28,19 @@
     ],
     "dependencies": {
         "electron-json-storage": "^4.1.8",
-        "request": "^2.88.0",
+        "request": "^2.88.2",
         "robotjs": "git+https://github.com/Toinane/robotjs",
         "sortablejs": "^1.10.2",
-        "tippy.js": "^5.1.3"
+        "tippy.js": "^5.2.1"
     },
     "optionalDependencies": {
         "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
         "win-mouse": "git+https://github.com/Toinane/win-mouse",
-        "iohook": "^0.6.2"
+        "iohook": "^0.6.5"
     },
     "devDependencies": {
-        "electron": "7.1.7",
-        "electron-builder": "21.2.0",
+        "electron": "9.0.0-beta.2",
+        "electron-builder": "22.3.2",
         "standard": "^14.3.1"
     },
     "author": {
@@ -53,7 +53,7 @@
     "license": "GPL-3.0",
     "iohook": {
         "targets": [
-            "electron-75"
+            "electron-80"
         ],
         "platforms": [
             "linux"
