wip: update build workflow & resources location

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,9 +1,14 @@
-name: CI
+name: Building Stable App
 
-on: pull_request
+on: 
+  pull_request:
+    branches:
+      - master
+    types: [closed] 
 
 jobs:
   release:
+    if: github.event.pull_request.merged == true
     runs-on: ${{ matrix.os }}
     
     strategy:
