--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
     "main": "src/main.js",
     "scripts": {
-        "start": "npx electron src/main.js",
+        "postinstall": "yarn rebuild",
+        "start": "yarn electron src/main.js",
         "standard": "standard",
         "pack": "electron-builder --dir",
         "publish": "snapcraft push --release=stable *.snap",
@@ -36,9 +37,9 @@
         "tippy.js": "^6.1.1"
     },
     "optionalDependencies": {
+        "iohook": "^0.6.5",
         "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
-        "win-mouse": "git+https://github.com/Toinane/win-mouse",
-        "iohook": "^0.6.5"
+        "win-mouse": "git+https://github.com/Toinane/win-mouse"
     },
     "devDependencies": {
         "electron": "8.2.1",
