--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "devDependencies": {
         "electron": "8.2.1",
         "electron-builder": "22.4.1",
+        "minimist": "^1.2.5",
         "standard": "14.3.3"
     },
     "author": {
