--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "url": "https://toinane.crea-th.at"
     },
     "bugs": "https://github.com/toinane/colorpicker/issues",
-    "homepage": "https://crea-th.at/p/colorpicker",
+    "homepage": "https://colorpicker.fr",
     "license": "GPL-3.0",
     "iohook": {
         "targets": [
