--- a/package.json
+++ b/package.json
@@ -102,36 +102,36 @@
     "homepage": "https://colorpicker.fr",
     "license": "CECILL-2.1",
     "scripts": {
-        "dev:electron": "NODE_ENV=development webpack --config ./scripts/webpack.electron.config.js --mode development && electron ./dist/main.js",
-        "dev:react": "NODE_ENV=development webpack-dev-server --config ./scripts/webpack.react.config.js --mode development",
+        "dev:electron": "webpack --config ./scripts/webpack.electron.config.js --mode development && electron ./dist/main.js",
+        "dev:react": "webpack-dev-server --config ./scripts/webpack.react.config.js --mode development",
         "build": "rm -rf ./dist && webpack --config ./scripts/webpack.electron.config.js --mode production",
         "release": "node scripts/build-release.js",
         "nightly": "node scripts/build-nightly.js"
     },
     "dependencies": {
-        "i18next": "^19.4.4",
+        "i18next": "^19.5.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
     },
     "devDependencies": {
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^2.32.0",
-        "@typescript-eslint/parser": "^2.32.0",
+        "@typescript-eslint/eslint-plugin": "^3.5.0",
+        "@typescript-eslint/parser": "^3.5.0",
         "css-loader": "^3.6.0",
-        "electron": "^8.2.5",
-        "electron-builder": "^22.6.0",
-        "eslint": "^7.0.0",
-        "eslint-plugin-react": "^7.19.0",
+        "electron": "^9.0.5",
+        "electron-builder": "^22.7.0",
+        "eslint": "^7.4.0",
+        "eslint-plugin-react": "^7.20.3",
         "html-webpack-plugin": "^4.3.0",
-        "source-map-loader": "^0.2.4",
+        "prettier": "^2.0.5",
+        "source-map-loader": "^1.0.1",
         "style-loader": "^1.2.1",
         "svg-url-loader": "^6.0.0",
         "ts-loader": "^7.0.5",
-        "tslint-config-security": "^1.16.0",
-        "typescript": "^3.8.3",
+        "typescript": "^3.9.6",
         "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
+        "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
     }
 }
