--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "es2020": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": ["eslint:recommended", "preact", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -12,7 +12,7 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "plugins": ["react", "@typescript-eslint"],
-    "ignorePatterns": ["scripts/"],
+    "plugins": ["@typescript-eslint"],
+    "ignorePatterns": ["scripts/", "dist/"],
     "rules": {}
 }
