--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,12 @@
         "jsxFactory": "h",
         "moduleResolution": "node",
         "baseUrl": ".",
-        "lib": ["es6", "dom"]
+        "lib": ["es6", "dom"],
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "paths": {
+            "react": ["node_modules/preact/compat/"],
+            "react-dom": ["node_modules/preact/compat/"]
+        } 
     }
 }
