--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "devDependencies": {
         "electron": "8.5.2",
         "electron-builder": "22.4.1",
+        "electron-rebuild": "^2.3.5",
         "minimist": "^1.2.5",
         "standard": "14.3.3"
     },
