--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 APP_ENVIRONNEMENT=development
-WIN_CERTIFICATE_PWD=
+// Used to build Nightly or Release app.
+BUILD_RELEASE=false
+// You don't need these below in your .env. It's exclusively used for signing app for production.
+CSC_LINK=
+CSC_KEY_PASSWORD=
