feat: new gh actions test

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -26,8 +26,8 @@ jobs:
             - name: install dependencies
               run: yarn install --frozen-lockfile
 
-            - name: install rimraf
-              run: yarn install rimraf
+            - name: add rimraf dependency
+              run: yarn add rimraf
 
             - name: build Colorpicker Nightly
               run: npm run release
