feat: new gh actions test

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "author": {
         "name": "Toinane",
+        "email": "hello@crea-that.fr",
         "url": "https://toinane.crea-th.at"
     },
     "bugs": "https://github.com/toinane/colorpicker/issues",
