--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -35,12 +35,16 @@ jobs:
             - name: create artifacts folder
               run: mkdir artifacts
 
-            - name: move build artifacts
-              run: cd release && mv *.deb *.rpm *.AppImage *.dmg ../artifacts && cd ../
-              if: matrix.os != 'windows-latest'
+            - name: move Linux build artifacts
+              run: mv release/*.deb release/*.AppImage release/*.tar.gz ./artifacts
+              if: matrix.os == 'ubuntu-latest'
+
+            - name: move Macos build artifacts
+              run: mv release/*.dmg ./artifacts
+              if: matrix.os == 'macos-latest'
 
             - name: move Windows build artifacts
-              run: move ./release/*.exe ./release/*.msi ./artifacts
+              run: move release/*.exe ./release/*.msi ./artifacts
               if: matrix.os == 'windows-latest'
 
             - name: test to remove
