--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -7,34 +7,6 @@ on:
         types: [closed]
 
 jobs:
-    release:
-        if: github.event.pull_request.merged == true
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: checkout
-              uses: actions/checkout@v2
-
-            - name: build
-              run: echo ${{ github.sha }} > release.txt
-
-            - name: test
-              run: cat release.txt
-
-            - name: create version
-              id: create_version
-              run: version=$(node -pe "require('./package.json').version")
-
-            - name: create prerelease
-              uses: actions/create-release@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  tag_name: ${{ steps.create_version.outputs.version }}
-                  release_name: Colorpicker Nightly ${{ steps.create_version.outputs.version }}
-                  draft: true
-                  prerelease: true
-
     build:
         if: github.event.pull_request.merged == true
         runs-on: ${{ matrix.os }}
@@ -48,53 +20,36 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: 15
-            - uses: actions/download-artifact@v1
-              with:
-                  name: info
-
-            - name: Set upload_url
-              id: upload_info
-              run: |
-                  upload_url=$(cat info/upload_url)
-                  echo "::set-output name=upload_url::$upload_url"
 
             - name: apt-get update on Ubuntu
               run: sudo apt-get update
-              if: startsWith(matrix.os, 'ubuntu')
+              if: matrix.os == 'ubuntu-latest'
 
-            - name: install Colorpicker packages
-              run: npm i
+            - name: install dependencies
+              run: yarn install --frozen-lockfile
 
             - name: build Colorpicker Nightly
               run: npm run release
-
-            - name: ls all
-              run: ls -la ./release
-
-    metadata:
-        name: Publish Release
-        needs: [build]
-        runs-on: ubuntu-latest
-
-        steps:
-            - uses: actions/download-artifact@v1
-              with:
-                  name: info
-
-            - name: Set publish_info
-              id: publish_info
-              run: |
-                  release_id=$(cat info/release_id)
-                  echo "::set-output name=release_id::$release_id"
-
-            - uses: eregon/publish-release@v1
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  release_id: ${{ steps.publish_info.outputs.release_id }}
+                  APP_ENVIRONNEMENT: production
 
-            - uses: eregon/keep-last-n-releases@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: create artifacts folder
+              run: mkdir artifacts
+
+            - name: move Linux build artifacts
+              run: mv release/*.deb release/*.AppImage release/*.freebsd release/*.tar.gz ./artifacts
+              if: matrix.os == 'ubuntu-latest'
+
+            - name: move Macos build artifacts
+              run: mv release/*.dmg ./artifacts
+              if: matrix.os == 'macos-latest'
+
+            - name: move Windows build artifacts
+              run: move release\*.exe, release\*.msi -Destination artifacts
+              if: matrix.os == 'windows-latest'
+
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v2
               with:
-                  n: 3
+                  name: ${{ matrix.os }}
+                  path: artifacts
