--- a/package.json
+++ b/package.json
@@ -40,10 +40,16 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "i18next": "^20.2.1",
+        "i18next-electron-fs-backend": "^1.3.5",
+        "i18next-fs-backend": "^1.1.1",
+        "path-browserify": "^1.0.1",
         "preact": "^10.5.13",
+        "process": "^0.11.10",
+        "react-i18next": "^11.8.13",
         "styled-components": "^5.2.3"
     },
     "devDependencies": {
+        "@types/i18next-fs-backend": "^1.0.0",
         "@types/styled-components": "^5.1.9",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
