--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,32 @@
 {
-    "env": {
-        "es2020": true,
-        "node": true
+  "env": {
+    "es2020": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "preact",
+    "plugin:@typescript-eslint/recommended",
+    "airbnb-base",
+    "airbnb-typescript/base",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": ["eslint:recommended", "preact", "plugin:@typescript-eslint/recommended"],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 11,
-        "sourceType": "module"
-    },
-    "plugins": ["@typescript-eslint"],
-    "ignorePatterns": ["scripts/", "dist/"],
-    "rules": {}
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "jsx-a11y"],
+  "ignorePatterns": ["dist", "scripts", "config"],
+  "rules": {
+    "linebreak-style": "off",
+    "import/extensions": "off"
+  },
+  "settings": {
+    "import/core-modules": ["electron"]
+  }
 }
