--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-    "printWidth": 120,
-    "singleQuote": true,
-    "tabWidth": 4,
-    "semi": false
+  "printWidth": 100,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "semi": true,
+  "endOfLine": "lf",
+  "trailingComma": "all"
 }
