--- a/package.json
+++ b/package.json
@@ -1,69 +1,79 @@
 {
-    "name": "colorpicker",
-    "productName": "colorpicker",
-    "version": "3.0.0",
-    "description": "Modern and powerful color management software",
-    "main": "dist/main.js",
-    "repository": "git@github.com:Toinane/new-colorpicker.git",
-    "keywords": [
-        "Colorpicker",
-        "Colors",
-        "Picker",
-        "Eyedropper",
-        "Shades",
-        "Tints",
-        "RGB",
-        "HSL"
-    ],
-    "os": [
-        "win32",
-        "darwin",
-        "linux"
-    ],
-    "engines": {
-        "node": ">=14"
-    },
-    "author": {
-        "name": "Toinane",
-        "email": "hello@crea-that.fr",
-        "url": "https://toinane.crea-th.at"
-    },
-    "bugs": "https://github.com/toinane/colorpicker/issues",
-    "homepage": "https://colorpicker.fr",
-    "license": "CECILL-2.1",
-    "scripts": {
-        "clean": "rm -rf dist release",
-        "prestart": "webpack --config ./scripts/webpack.config.js",
-        "start": "concurrently -n \"WEBPACK,ELECTRON\" -c \"bgGreen,bgBlue\" \"webpack -w --config ./scripts/webpack.config.js\" \"electron .\"",
-        "release": "yarn prestart && node scripts/build-app.js"
-    },
-    "dependencies": {
-        "dotenv": "^8.2.0",
-        "i18next": "^20.2.1",
-        "preact": "^10.5.13",
-        "styled-components": "^5.2.3"
-    },
-    "devDependencies": {
-        "@types/styled-components": "^5.1.9",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "concurrently": "^6.0.2",
-        "css-loader": "^5.2.3",
-        "electron": "^12.0.4",
-        "electron-builder": "^22.10.5",
-        "electron-notarize": "^1.0.0",
-        "eslint": "^7.24.0",
-        "eslint-config-preact": "^1.1.3",
-        "html-webpack-plugin": "^5.3.1",
-        "prettier": "^2.2.1",
-        "style-loader": "^2.0.0",
-        "terser-webpack-plugin": "^5.1.1",
-        "ts-loader": "^9.0.0",
-        "ttypescript": "^1.5.12",
-        "typescript": "^4.2.4",
-        "typescript-plugin-styled-components": "^1.5.0",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.34.0",
-        "webpack-cli": "^4.6.0"
-    }
+  "name": "colorpicker",
+  "productName": "colorpicker",
+  "version": "3.0.0",
+  "description": "Modern and powerful color management software",
+  "main": "dist/main.js",
+  "repository": "git@github.com:Toinane/new-colorpicker.git",
+  "keywords": [
+    "Colorpicker",
+    "Colors",
+    "Picker",
+    "Eyedropper",
+    "Shades",
+    "Tints",
+    "RGB",
+    "HSL"
+  ],
+  "os": [
+    "win32",
+    "darwin",
+    "linux"
+  ],
+  "engines": {
+    "node": ">=16"
+  },
+  "author": {
+    "name": "Toinane",
+    "email": "hello@crea-that.fr",
+    "url": "https://toinane.crea-th.at"
+  },
+  "bugs": "https://github.com/toinane/colorpicker/issues",
+  "homepage": "https://colorpicker.fr",
+  "license": "CECILL-2.1",
+  "scripts": {
+    "clean": "rm -rf dist release",
+    "dev:front": "webpack serve --config-name front --mode development --config ./config/webpack.config.js",
+    "dev:back": "webpack --config-name back --mode development --config ./config/webpack.config.js",
+    "dev": "concurrently -k -n \"WEBPACK,ELECTRON\" -c \"bgGreen,bgBlue\" \"yarn dev:front\" \"yarn dev:back\"",
+    "build": "yarn clean && webpack --mode production --config ./config/webpack.config.js",
+    "start": "yarn build && electron .",
+    "release:nightly": "yarn build && node scripts/build-app.js ",
+    "release:stable": "yarn build && cross-env BUILD_RELEASE=true node scripts/build-app.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
+  "dependencies": {
+    "i18next": "^21.6.16",
+    "preact": "^10.5.13"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "electron": "^18.1.0",
+    "electron-builder": "^23.0.3",
+    "electron-notarize": "^1.0.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^28.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.2.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "tree-kill-promise": "^2.0.8",
+    "ts-loader": "^9.0.0",
+    "typescript": "^4.2.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.8.1"
+  }
 }
