--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,23 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist",
-        "module": "commonjs",
-        "target": "ES2020",
-        "sourceMap": true,
-        "strict": true,
-        "allowJs": true,
-        "noImplicitAny": true,
-        "esModuleInterop": true,
-        "jsx": "react",
-        "jsxFactory": "h",
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "lib": ["es6", "dom"],
-        "skipLibCheck": true,
-        "allowSyntheticDefaultImports": true,
-        "paths": {
-            "react": ["node_modules/preact/compat/"],
-            "react-dom": ["node_modules/preact/compat/"]
-        },
-        "plugins": [
-            {
-                "transform": "typescript-plugin-styled-components",
-                "type": "config",
-                "minify": true,
-                "ssr": true
-            }
-        ]
+  "compilerOptions": {
+    "outDir": "./dist",
+    "module": "CommonJS",
+    "target": "es2022",
+    "lib": ["esnext", "dom"],
+    "sourceMap": true,
+    "allowJs": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "react": ["node_modules/preact/compat/"],
+      "react-dom": ["node_modules/preact/compat/"]
     }
+  }
 }
