--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "3.0.0",
   "description": "Modern and powerful color management software",
   "main": "dist/main.js",
-  "repository": "git@github.com:Toinane/new-colorpicker.git",
+  "repository": "git@github.com:Toinane/colorpicker.git",
   "keywords": [
     "Colorpicker",
     "Colors",
