--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "start": "yarn build && electron .",
     "release:nightly": "yarn build && node scripts/build-app.js ",
     "release:stable": "yarn build && cross-env BUILD_RELEASE=true node scripts/build-app.js",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "yarn build && playwright test"
   },
   "dependencies": {
     "i18next": "^21.6.16",
     "preact": "^10.5.13"
   },
   "devDependencies": {
+    "@playwright/test": "^1.21.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "concurrently": "^7.1.0",
@@ -66,6 +68,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^28.0.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "playwright": "^1.21.1",
     "prettier": "^2.2.1",
     "terser-webpack-plugin": "^5.1.1",
     "tree-kill-promise": "^2.0.8",
