--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "dependencies": {
     "colorjs.io": "^0.0.5",
     "i18next": "^21.6.16",
-    "preact": "^10.5.13"
+    "preact": "^10.5.13",
+    "recoil": "^0.7.2",
+    "wouter-preact": "^2.8.0-alpha.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.1",
@@ -67,6 +69,7 @@
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^28.0.0",
