--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "airbnb-base",
     "airbnb-typescript/base",
     "plugin:jsx-a11y/recommended",
-    "react-hooks"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -21,7 +21,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "jsx-a11y"],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "react-hooks"],
   "ignorePatterns": ["dist", "scripts", "config"],
   "rules": {
     "linebreak-style": "off",
