--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "colorjs.io": "^0.0.5",
+    "electron-light-storage": "^1.2.0",
     "i18next": "^21.6.16",
     "preact": "^10.5.13",
     "recoil": "^0.7.2",
@@ -67,6 +68,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.5.0",
