--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "test": "yarn build && playwright test"
   },
   "dependencies": {
-    "colorjs.io": "^0.0.5",
+    "culori": "git+https://github.com/Toinane/culori.git#d02dd95",
     "i18next": "^21.6.16",
-    "preact": "^10.5.13",
+    "preact": "^10.7.1",
     "recoil": "^0.7.2",
     "wouter-preact": "^2.8.0-alpha.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.1",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "electron": "^18.1.0",
+    "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
-    "electron-notarize": "^1.0.0",
+    "electron-notarize": "^1.2.1",
     "electron-rebuild": "^3.2.7",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -72,18 +72,18 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "html-webpack-plugin": "^5.3.1",
-    "jest": "^28.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.0.3",
     "mini-css-extract-plugin": "^2.6.0",
     "playwright": "^1.21.1",
-    "prettier": "^2.2.1",
-    "terser-webpack-plugin": "^5.1.1",
+    "prettier": "^2.6.2",
+    "terser-webpack-plugin": "^5.3.1",
     "tree-kill-promise": "^2.0.8",
-    "ts-loader": "^9.0.0",
-    "typescript": "^4.2.4",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
 }
