--- a/package.json
+++ b/package.json
@@ -1,69 +1,67 @@
 {
-    "name": "colorpicker",
-    "productName": "colorpicker",
-    "version": "2.0.5",
-    "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
-    "main": "src/main.js",
-    "scripts": {
-        "start": "npx electron src/main.js",
-        "standard": "standard",
-        "pack": "electron-builder --dir",
-        "publish": "snapcraft push --release=stable *.snap",
-        "release": "electron-builder --publish=never --config colorpicker-build.json",
-        "release-linux": "electron-builder --publish=never --config colorpicker-build.json --linux deb appImage",
-        "release-snap": "snapcraft snap",
-        "release-window": "electron-builder --publish=never --config colorpicker-build.json --win nsis portable",
-        "nightly": "electron-builder --publish=never --config colorpicker-build-nightly.json",
-        "nightly-linux": "electron-builder --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
-        "rebuild": "npm rebuild --runtime=electron --target=9.4.4 --disturl=https://electronjs.org/headers --abi=80"
-    },
-    "repository": "https://github.com/toinane/colorpicker",
-    "keywords": [
-        "Colorpicker",
-        "colors",
-        "code",
-        "shading",
-        "picker",
-        "Toinane",
-        "Crea-THAT",
-        "crea-that"
+  "name": "colorpicker",
+  "productName": "colorpicker",
+  "version": "2.1.0",
+  "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "npx electron src/main.js",
+    "standard": "standard",
+    "pack": "electron-builder --dir",
+    "publish": "snapcraft push --release=stable *.snap",
+    "release": "electron-builder --publish=never --config colorpicker-build.json",
+    "release-linux": "electron-builder --publish=never --config colorpicker-build.json --linux deb appImage",
+    "release-snap": "snapcraft snap",
+    "release-window": "electron-builder --publish=never --config colorpicker-build.json --win nsis portable",
+    "nightly": "electron-builder --publish=never --config colorpicker-build-nightly.json",
+    "nightly-linux": "electron-builder --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
+    "rebuild": "npm rebuild --runtime=electron --target=18.2.3 --disturl=https://electronjs.org/headers --abi=103"
+  },
+  "repository": "https://github.com/toinane/colorpicker",
+  "keywords": [
+    "Colorpicker",
+    "colors",
+    "code",
+    "shading",
+    "picker",
+    "Toinane",
+    "Crea-THAT",
+    "crea-that"
+  ],
+  "dependencies": {
+    "electron-json-storage": "^4.5.0",
+    "request": "^2.88.2",
+    "robotjs": "github:Toinane/robotjs",
+    "semver": "^7.3.7"
+  },
+  "optionalDependencies": {
+    "iohook": "^0.9.3",
+    "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
+    "win-mouse": "github:Toinane/win-mouse"
+  },
+  "devDependencies": {
+    "electron": "^18.2.3",
+    "electron-builder": "^23.0.3",
+    "standard": "^17.0.0"
+  },
+  "author": {
+    "name": "Toinane",
+    "email": "toinane@crea-that.fr",
+    "url": "https://toinane.crea-th.at"
+  },
+  "bugs": "https://github.com/toinane/colorpicker/issues",
+  "homepage": "https://crea-th.at/p/colorpicker",
+  "license": "GPL-3.0",
+  "iohook": {
+    "targets": [
+      "electron-103"
     ],
-    "dependencies": {
-        "electron-json-storage": "^4.4.0",
-        "request": "^2.88.2",
-        "robotjs": "git+https://github.com/Toinane/robotjs",
-        "sortablejs": "^1.13.0",
-        "tippy.js": "^6.3.1"
-    },
-    "optionalDependencies": {
-        "iohook": "^0.9.0",
-        "osx-mouse": "git+https://github.com/Toinane/osx-mouse",
-        "win-mouse": "git+https://github.com/Toinane/win-mouse"
-    },
-    "devDependencies": {
-        "electron": "9.4.4",
-        "electron-builder": "22.10.5",
-        "minimist": "^1.2.5",
-        "standard": "16.0.3"
-    },
-    "author": {
-        "name": "Toinane",
-        "email": "toinane@crea-that.fr",
-        "url": "https://toinane.crea-th.at"
-    },
-    "bugs": "https://github.com/toinane/colorpicker/issues",
-    "homepage": "https://crea-th.at/p/colorpicker",
-    "license": "GPL-3.0",
-    "iohook": {
-        "targets": [
-            "electron-80"
-        ],
-        "platforms": [
-            "linux"
-        ],
-        "arches": [
-            "x64",
-            "ia32"
-        ]
-    }
+    "platforms": [
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
+    ]
+  }
 }
