--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
       "react": ["node_modules/preact/compat/"],
       "react-dom": ["node_modules/preact/compat/"]
     }
-  }
+  },
+  "exclude": ["src-tauri"]
 }
