--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "jsx-a11y", "react-hooks"],
-  "ignorePatterns": ["dist", "scripts", "config"],
+  "ignorePatterns": ["dist", "scripts", "config", "src-tauri"],
   "rules": {
     "no-async-promise-executor": 2,
     "no-await-in-loop": 2,
