--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -2,7 +2,7 @@ name: Package Colorpicker
 
 on:
   workflow_dispatch:
-    
+
 jobs:
   package:
     name: Package Colorpicker
@@ -10,12 +10,12 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-    
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 20
       - name: Install Linux deps
         if: ${{ runner.os == 'Linux' }}
         run: |
@@ -26,7 +26,7 @@ jobs:
       - name: Package Colorpicker
         run: npm run release
       - name: Publish artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Colorpicker-${{ runner.os }}-artifacts
           path: out
