--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 runtime = electron
-target = 19.1.9
-target_arch = x64
+target = 38.2.0
+target_arch = x64,arm64
 disturl = https://electronjs.org/headers
 export npm_config_runtime=electron
 export npm_config_build_from_source=true
