--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Colorpicker-${{ runner.os }}-artifacts
-          path: out
+          path: dist
