--- a/package.json
+++ b/package.json
@@ -2,89 +2,67 @@
   "name": "colorpicker",
   "productName": "colorpicker",
   "version": "3.0.0",
-  "description": "Modern and powerful color management software",
-  "main": "dist/main.js",
-  "repository": "git@github.com:Toinane/colorpicker.git",
+  "description": "Your powerful toolkit for mastering colors.",
+  "bugs": "https://github.com/toinane/colorpicker/issues",
+  "homepage": "https://colorpicker.fr",
   "keywords": [
     "Colorpicker",
-    "Colors",
-    "Picker",
     "Eyedropper",
-    "Shades",
-    "Tints",
+    "Colors",
+    "Palette",
+    "Accessibility",
+    "Design tool",
     "RGB",
-    "HSL"
+    "HSL",
+    "Hex"
   ],
   "os": [
     "win32",
     "darwin",
     "linux"
   ],
-  "engines": {
-    "node": ">=16"
-  },
   "author": {
     "name": "Toinane",
     "email": "hello@crea-that.fr",
-    "url": "https://toinane.crea-th.at"
+    "url": "https://colorpicker.fr"
   },
-  "bugs": "https://github.com/toinane/colorpicker/issues",
-  "homepage": "https://colorpicker.fr",
+  "engines": {
+    "node": ">=22"
+  },
   "license": "CECILL-2.1",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "postinstall": "npx electron-rebuild",
-    "clean": "rm -rf dist release",
-    "dev:front": "webpack serve --config-name front --mode development --config ./config/webpack.config.js",
-    "dev:back": "webpack --config-name back --mode development --config ./config/webpack.config.js",
-    "dev": "concurrently -k -n \"WEBPACK,ELECTRON\" -c \"bgGreen,bgBlue\" \"npm run dev:front\" \"npm run dev:back\"",
-    "build": "npm run clean && webpack --mode production --config ./config/webpack.config.js",
-    "start": "npm run build && electron .",
-    "release:nightly": "npm run build && node scripts/build-app.js",
-    "release:stable": "npm run build && cross-env BUILD_RELEASE=true node scripts/build-app.js",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "npm run build && playwright test"
-  },
-  "dependencies": {
-    "colorjs.io": "^0.4.2",
-    "culori": "git+https://github.com/Toinane/culori.git#d02dd95",
-    "i18next": "^22.0.6",
-    "preact": "^10.11.3",
-    "recoil": "^0.7.6",
-    "wouter-preact": "^2.9.0"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx .",
+    "test": "npm run make && playwright test"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "concurrently": "^7.6.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.2",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "electron": "^21.3.1",
-    "electron-builder": "^23.6.0",
-    "electron-notarize": "^1.2.2",
-    "electron-rebuild": "^3.2.9",
-    "eslint": "^8.28.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
-    "mini-css-extract-plugin": "^2.7.0",
-    "playwright": "^1.28.1",
-    "prettier": "^2.8.0",
-    "terser-webpack-plugin": "^5.3.6",
-    "tree-kill-promise": "^2.0.8",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-rpm": "^7.9.0",
+    "@electron-forge/maker-squirrel": "^7.9.0",
+    "@electron-forge/maker-zip": "^7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+    "@electron-forge/plugin-vite": "^7.9.0",
+    "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "electron": "38.2.1",
+    "eslint": "^9.37.0",
+    "eslint-plugin-import": "^2.32.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9"
+  },
+  "dependencies": {
+    "colorjs.io": "^0.5.2",
+    "electron-squirrel-startup": "^1.0.1",
+    "i18next": "^25.5.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
